re PR bootstrap/44512 (--enable-build-with-cxx bootstrap fails in revision 160669)

PR bootstrap/44512
        * c-cppbuiltin.c (builtin_define_with_hex_fp_value): Add cast
        for C++ standard compliance.

From-SVN: r160922